fixing: space under footer, footer position, spacing

--- a/src/scss/boilerplate/init.scss
+++ b/src/scss/boilerplate/init.scss
@@ -18,8 +18,8 @@ html {
 }
 body {
   box-sizing: border-box;
-  width: 100vw;
-  min-height: 300vh;
+  // width: 100vw;
+  // min-height: 300vh;
   height: 100%;
   margin: 0;
   padding: 0;
