--- a/src/scss/global/typography.scss
+++ b/src/scss/global/typography.scss
@@ -115,6 +115,7 @@ textarea {
 }
 
 .label {
+  font-family: $ff-sans;
   color: $clr-gray;
   font-weight: 300;
   text-transform: uppercase;
