--- a/src/scss/pages/home/contact.scss
+++ b/src/scss/pages/home/contact.scss
@@ -33,10 +33,9 @@
 
     @include breakpoint(large) {
       grid-template-columns: 1fr 1fr;
-      grid-template-rows: auto;
-      grid-template-areas: "contact-info form";
+      grid-template-rows: auto auto;
+      grid-template-areas: "contact-info form" "foot form";
       max-width: unset;
-      margin-bottom: 4.5rem;
     }
   }
 
@@ -89,6 +88,7 @@
       align-items: flex-start;
       margin: 0;
       max-width: 30rem;
+      padding-bottom: 1.7rem;
     }
   }
 }
@@ -129,23 +129,17 @@
 }
 
 footer {
-  padding: 1.2rem 1.5rem;
+  padding: 1rem 1.5rem;
   background: lighten($clr-black, 20%);
   text-align: center;
-
   @include breakpoint(medium) {
-    padding: 2.5rem 2rem;
+    padding: 2rem 2rem;
   }
 
   @include breakpoint(large) {
-    position: relative;
-    width: 50%;
-    max-width: 43rem;
-    left: 50%;
-    margin-top: -12rem;
+    grid-area: foot;
+    align-self: flex-end;
     text-align: right;
-
-    transform: translateX(-105%);
   }
 
   p {
